replace use of deprecated constructor